2006-09-20  Aaron Bockover  <abock@gnome.org>

	* Makefile.am:
	* configure.ac:
	* dbus-sharp: Added new managed version of dbus-sharp; much to change here

	* src/Banshee.Base/Makefile.am: Link against NDesk.DBus

2006-09-20  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/DBusPlayer.cs: DBusPlayer now implements IDBusPlayer

2006-09-19  Aaron Bockover  <abock@gnome.org>

	* configure.ac: explicitly check for dbus-glib-1 versions to map to
	proper .so versions, added check on dbus-1 for 0.90, which now maps
	to .so version 3; added lots of missing AC_MSG_RESULTs, so configure
	output looks a little cleaner

	* hal-sharp/hal-sharp.dll.config.in:
	* src/banshee.exe.config.in: Added DBUS_GLIB_SOVERSION

	* tools/Makefile.am: Do not install banshee-import

2006-09-19  Aaron Bockover  <abock@gnome.org>

	* src/PlayerInterface.cs: Manually call Activate on cell renderers
	if clicked when row is selected (Michael Quinn, BGO #348373)

2006-09-19  Aaron Bockover  <abock@gnome.org>

	0.11.0 Released

	* NEWS: Updated

2006-09-19  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Dap/Ipod/IpodDap.cs: Use new unknown iPod foo in ipod-sharp,
	show a dialog if the iPod is unknown

	* data/images/source-smart-playlist.png: Updated

	* src/Banshee.Widgets/HigMessageDialog.cs: Exposed LabelVBox

	* src/Banshee.Plugins/NotificationAreaIcon/NotificationAreaIconPlugin.cs: 
	Use slightly nicer notification string formatting

	* src/Banshee.Plugins/NotificationAreaIcon/banshee-notificationareaicon.schemas.in:
	Enabled by default

2006-09-18  Aaron Bockover  <abock@gnome.org>

	* configure.ac: Bump to 0.11.0

	* autogen.sh: Check for subversion, run taglib-sharp/update-checkout.sh

	* taglib-sharp/Makefile.am: Build taglib-sharp

	* taglib-sharp/update-checkout.sh: Shell script to update the taglib-sharp
	checkout

	* taglib-sharp/COPYING: Added taglib-sharp license 

	* taglib-sharp/taglib-sharp.dll:
	* taglib-sharp/taglib-sharp.dll.mdb: Precompiled binaries removed
