@@ -1,3 +1,8 @@
+2006-09-21  Alp Toker  <alp@atoker.com>
+
+	* src/Banshee.Base/DBusRemote.cs:
+	* src/Banshee.Base/DBusPlayer.cs: Start to make use of managed dbus
+
 2006-09-20  Aaron Bockover  <abock@gnome.org>
 
 	* Makefile.am:
